--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <body>
     <h1> Kavya, video creator </h1>
     <img width="60%" src= "pexels.jpg">
+    <p>Nature is a vast tapestry of life, where delicate ecosystems interweave in perfect harmony. From towering mountains to meandering rivers, it unfolds a breathtaking spectacle of diversity. The rustling leaves in a serene forest whisper tales of ancient tranquility, while the vibrant hues of a sunset paint the sky with a kaleidoscope of emotions. Nature's rhythm, played by the wind, water, and wildlife, creates a symphony that resonates with the essence of existence. In its simplicity and complexity, nature remains a timeless muse, inspiring awe and fostering a profound connection with the world around us.</p>
     <<iframe width="560" height="315" src="https://www.youtube.com/embed/8RmBwlvrNFU?si=ehtD7Wyc2jl8_5OH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<p>Vercel is a cloud platform that specializes in providing serverless deployment and hosting solutions for web applications. It is known for its simplicity, ease of use, and seamless integration with popular frontend frameworks and static site generators.
+
+Developers can use Vercel to deploy their websites or web applications quickly, taking advantage of features like automatic scaling, continuous deployment, and global CDN (Content Delivery Network) distribution. Vercel supports various programming languages and frameworks, making it versatile for different types of projects.
+
+One notable feature of Vercel is its support for serverless functions, allowing developers to run backend logic without managing traditional server infrastructure. This serverless architecture enhances scalability and reduces operational complexity.
+
+Additionally, Vercel provides a user-friendly dashboard, real-time logs, and collaboration features to streamline the development and deployment process. Overall, Vercel is a popular choice among developers for its efficiency in deploying modern web applications and services.
+
+
+
+
+
+
+
     </body>
 </html>
